# Bitlysis

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/app/: config.py  error_handlers.py  logging_conf.py  main.py
services/api/app/core/: __init__.py  analysis.py  export.py
services/api/app/jobs/: __init__.py  cloudflare_queue_stub.py  local_queue.py  queue.py
services/api/app/middleware/: request_id.py  security_headers.py  upload_rate_limit.py
services/api/app/repositories/: __init__.py  job_repository.py
services/api/app/routers/: upload.py
services/api/app/schemas/: export_phase.py  job.py  llm.py  profiling.py  run.py  stats.py  upload.py  web_analysis.py
services/api/app/services/: analyze_tasks.py  auto_analysis.py  export_renderers.py  export_zip_builder.py  file_magic.py  job_data.py  job_store.py  llm_hypotheses.py  profiling.py  provenance.py  r_pipeline.py  retention.py  stats_engine.py  timeseries_engine.py  upload_store.py  web_analyzer.py
services/api/app/storage/: __init__.py  base.py  local.py  r2.py
services/api/eval/: README.md
services/api/eval/golden/: hypothesis_llm_golden.json
services/api/scripts/: generate_test_fixtures.py  probe_openai.py  probe_openai_responses.py
services/api/tests/: conftest.py  test_export_zip_integration.py  test_fixtures.py  test_full_auto_analysis.py  test_hypothesis_router.py  test_jobs.py  test_llm_golden.py  test_profiling.py  test_r_pipeline.py  test_run_endpoint.py  test_stats_engine.py  test_timeseries_engine.py  test_upload.py  test_upload_trust.py  test_web_analysis.py
services/api/tests/fixtures/: README.md  sample_clean.xlsx  sample_cp1252.csv  sample_multi_sheet_merged.xlsx  sample_utf8.csv  timeseries_eu.csv
(+84 files in other folders)
